# yolov5

./: makeTxt.py  pyproject.toml  requirements.txt  train.py  voc_label.py
data/: dog.yaml
