[tool.poetry]
name = "yolov5"
version = "0.1.0"
description = ""
authors = ["c95xgb <benson0221126@g.ncu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5"
opencv-python = ">=4.1.2"
Pillow = ">=7.1.2"
PyYAML = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
torch = ">=1.7.0"
torchvision = ">=0.8.1"
tqdm = ">=4.41.0"
tensorboard = ">=2.4.1"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
wandb = "^0.12.9"
labelImg = "^1.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
